--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap");
 * {
-	padding: ;
-	margin: ;
-	box-sizing: border-box;
-	font-family: 'Roboto', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 nav {
-	height: 70px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 16px;
 }
 
 .logo {
-	width: 300px;
+  width: 300px;
 }
 
 ul {
-	display: flex;
+  display: flex;
 }
 
 li {
-	list-style-type: none;
-	padding-left: 16 px;
+  list-style-type: none;
+  padding-left: 16px;
 }
