--- a/styles.css
+++ b/styles.css
@@ -70,14 +70,18 @@ li {
   justify-content: center;
 }
 
+#about,
+#discord,
+#contact {
+  padding: 0px 24px;
+}
+
 /* 
 
 ABOUT
 
 */
-
 #about {
-  padding: 48px 0px;
   background-color: #f8ffdc;
 }
 
@@ -107,11 +111,40 @@ h2 {
 
 .about__img--wrapper,
 .section__description--wrapper {
-  padding: 0px 24px;
+  padding: 0px 24px 0px 24px;
 }
+
 .section__description--para {
   font-size: 20px;
   line-height: 1.5;
   margin-bottom: 20px;
 }
 
+/* 
+
+DISCORD
+
+*/
+
+#discord {
+  background-color: #cefeff;
+}
+
+/* 
+
+CONTACT
+
+*/
+
+#contact {
+  background-color: #dce9ff;
+}
+
+form {
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  marigin 0 auto;
+  
+}
