--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ li {
 
 #about,
 #discord,
-#contact, 
+#contact,
 #footer {
   padding: 0px 24px;
 }
@@ -148,10 +148,10 @@ form {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-
 }
 
-input, textarea {
+input,
+textarea {
   margin-bottom: 24px;
   font-size: 20px;
   padding: 6px 12px;
@@ -177,8 +177,44 @@ footer {
 
 .footer__links {
   margin-bottom: 32px;
-
 }
 .footer__links {
   padding: 0px 16px;
+}
+
+/* SMALL PHONES, TABLETS AND SMALL LAPTOPS */
+@media (max-width: 728px) {
+  .row {
+    flex-direction: column;
+  }
+  .home__discription {
+   margin-bottom: 24px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 60px;
+}
+
+.subheader {
+  text-align: center;
+  font-size: 28px;
+}
+
+.subheader {
+  font-size: 24px;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+.section__description--para,
+input,
+textarea {
+  font-size: 16px;
+}
+
+button {
+  font-size: 18px;
 }
