--- a/styles.css
+++ b/styles.css
@@ -188,33 +188,32 @@ footer {
     flex-direction: column;
   }
   .home__discription {
-   margin-bottom: 24px;
-}
+    margin-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-h1 {
-  text-align: center;
-  font-size: 60px;
-}
+  h1 {
+    text-align: center;
+    font-size: 60px;
+  }
 
-.subheader {
-  text-align: center;
-  font-size: 28px;
-}
+  .subheader {
+    text-align: center;
+    font-size: 28px;
+    flex-direction: column;
+  }
 
-.subheader {
-  font-size: 24px;
-}
+  ul {
+    display: none;
+  }
 
-h2 {
-  font-size: 36px;
-}
+  h2 {
+    font-size: 36px;
+  }
 
-.section__description--para,
-input,
-textarea {
-  font-size: 16px;
-}
-
-button {
-  font-size: 18px;
+  .section__description {
+    flex-direction: column;
+  }
 }
