--- a/styles.css
+++ b/styles.css
@@ -187,11 +187,16 @@ footer {
   .row {
     flex-direction: column;
   }
+
   .home__discription {
     margin-bottom: 24px;
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .home__discription--button {
+    max-width: 240px;
   }
 
   h1 {
@@ -215,5 +220,13 @@ footer {
 
   .section__description {
     flex-direction: column;
+  }
+
+  .section__description--wrapper {
+    width: 100%;
+  }
+
+  .about__img--wrapper {
+    width: 100%;
   }
 }
