--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ nav {
 
 header {
   background-color: #eadcff;
-  height: calc(100vh - 70px);
+  min-height: calc(100vh - 70px);
   padding: 24px;
   display: flex;
   align-items: center;
